@@ -58,6 +58,14 @@ echo "cpuCount ${cpuCount} javaCpuCount ${javaCpuCount} exec ${CMD}"
 
 exec ${CMD} \
   @conf/vm.options \
+  --add-opens=java.base/java.lang=ALL-UNNAMED \
+  --add-opens=java.base/java.math=ALL-UNNAMED \
+  --add-opens=java.base/java.util=ALL-UNNAMED \
+  --add-opens=java.base/java.util.concurrent=ALL-UNNAMED \
+  --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED \
+  --add-opens=java.base/java.net=ALL-UNNAMED \
+  --add-opens=java.base/java.text=ALL-UNNAMED \
+  --add-opens=java.sql/java.sql=ALL-UNNAMED \
   -XX:ActiveProcessorCount=${cpuCount} \
   -cp $1/conf:lib/* \
   oap.application.Boot \
